33 - finishing security setup